<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iletisim_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Iletisim.IletisimActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="10dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/addressText"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/facebook"
            android:fontFamily="sans-serif"
            android:text="@string/facebook" />

        <Button
            android:id="@+id/buttonTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/twitter"
            android:fontFamily="sans-serif"
            android:text="@string/twitter" />

        <Button
            android:id="@+id/buttonYoutube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/youtube"
            android:fontFamily="sans-serif"
            android:text="@string/youtube" />

        <Button
            android:id="@+id/buttonInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/instagram"
            android:fontFamily="sans-serif"
            android:text="@string/instagram" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonTelRehber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:text="@string/bel_tel_rehber"/>

</RelativeLayout>