<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/personel_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="8dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TableRow>
                <TextView
                    android:id="@+id/perNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/per_name"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/perNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </TableRow>


            <TableRow>
                <TextView
                    android:id="@+id/perPhoneTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/per_phone"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/perPhoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </TableRow>


            <TableRow>
                <TextView
                    android:id="@+id/perEmailTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/per_email"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/perEmailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </TableRow>


            <TableRow>
                <TextView
                    android:id="@+id/perDeptTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/per_dept"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/perDeptText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </TableRow>


            <TableRow>
                <TextView
                    android:id="@+id/perJobTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/per_job"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/perJobText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/perDPhoneTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/per_dphone"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/perDPhoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/perDMailTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/per_dmail"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/perDMailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/perConnTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/per_conn"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/perConnText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
